--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,25 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-<div class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
+  {%- include head.html -%}
 
-  {{ content }}
-</div>
+  <body class="large-background">
+
+    {%- include navbar.html -%}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        <div class="home-hero">
+          <img src="assets/logo_text_on_transparent.png" width="60%" alt="Project X">
+        </div>
+        <div>
+          {{ content }}
+        </div>
+      </div>
+    </main>
+
+    {%- include footer.html -%}
+
+  </body>
+
+</html>
