--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.12.0/js/mdb.min.js"></script>
 
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}">
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400&display=swap" rel="stylesheet">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
