--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 
   <div class="container">
 
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="/">
       <img src="assets/logo_white_on_transparent.png" height="30" alt="logo">&nbsp;<img src="assets/logo_text_on_transparent.png" height="30" alt="Project X">
     </a>
 
