--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <div class="container">
-  Contact Us: &nbsp; <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
+  <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>
 </div>
